Configurar bot para Render y webhook

--- a/.env.txt
+++ b/.env.txt
@@ -7,5 +7,5 @@ WOMPI_ID_URL=https://id.wompi.sv/connect/token  # sandbox pruebas
 WOMPI_API_BASE=https://api.wompi.sv
 EMAILS_NOTIFICACION=statsdeportivo@gmail.com
 CHANNEL_ID=-1003227993764
-WEBHOOK_URL=https://21081b47bb9b.ngrok.app/wompi/webhook  # Dejar vacío para probar local
-MODE=local  # Esto activa local
+WEBHOOK_URL=https://wompi-telegram-bot.onrender.com/webhook  # Dejar vacío para probar local
+MODE=render  # Esto activa local
