--- a/.env.txt
+++ b/.env.txt
@@ -1,11 +1,11 @@
-BOT_TOKEN=8090827155:AAFm3jiDV5a9EjljxbpCR8XPaA0cNAivuMI
-WOMPI_CLIENT_ID=20971600-a05f-499d-a388-5360db3637c0
-WOMPI_CLIENT_SECRET=0e06c2ea-e98b-45eb-a1d1-e3d34d5ef838
+BOT_TOKEN=TU_BOT_TOKEN
+WOMPI_CLIENT_ID=TU_CLIENT_ID
+WOMPI_CLIENT_SECRET=TU_CLIENT_SECRET
 WOMPI_AUDIENCE=wompi_api
 
-WOMPI_ID_URL=https://id.wompi.sv/connect/token  # sandbox pruebas
+WOMPI_ID_URL=https://id.wompi.sv/connect/token
 WOMPI_API_BASE=https://api.wompi.sv
 EMAILS_NOTIFICACION=statsdeportivo@gmail.com
 CHANNEL_ID=-1003227993764
-WEBHOOK_URL=https://wompi-telegram-bot.onrender.com/webhook  # Dejar vacío para probar local
-MODE=render  # Esto activa local
+WEBHOOK_URL=https://wompi-telegram-bot.onrender.com/wompi/webhook
+MODE=render
