Actualizar bot para Render

--- a/.env.txt
+++ b/.env.txt
@@ -7,5 +7,5 @@ WOMPI_ID_URL=https://id.wompi.sv/connect/token
 WOMPI_API_BASE=https://api.wompi.sv
 EMAILS_NOTIFICACION=statsdeportivo@gmail.com
 CHANNEL_ID=-1003227993764
-WEBHOOK_URL=https://wompi-telegram-bot.onrender.com/wompi/webhook
+WEBHOOK_URL=https://wompi-telegram-bot.onrender.com/webhook
 MODE=render
